--- a/roles/subnet/tasks/main.yaml
+++ b/roles/subnet/tasks/main.yaml
@@ -1,4 +1,32 @@
 ---
+- name: Create default NSG - {{ subnet_name }}
+  azure.azcollection.azure_rm_securitygroup:
+    resource_group: "{{ subnet_rg_name }}"
+    name: "nsg-{{ subnet_name }}"
+    # not to remove rules not matching those defined in rules
+    purge_rules: false
+    rules:
+      - name: Deny-Inbound
+        description: Block all Inbound
+        direction: Inbound
+        priority: 4096
+        protocol: "*"
+        source_port_range: "*"
+        source_address_prefix: "*"
+        destination_port_range: "*"
+        destination_address_prefix: "*"
+        access: Deny
+      - name: Deny-Outbound
+        description: Block all Outbound
+        direction: Outbound
+        priority: 4096
+        protocol: "*"
+        source_port_range: "*"
+        source_address_prefix: "*"
+        destination_port_range: "*"
+        destination_address_prefix: "*"
+        access: Deny
+
 - name: Ensure Subnet is Present - {{ subnet_name }}
   azure.azcollection.azure_rm_subnet:
     resource_group: "{{ subnet_rg_name }}"
@@ -6,3 +34,4 @@
     name: "{{ subnet_name }}"
     address_prefix_cidr: "{{ subnet_address_prefix_cidr }}"
     state: "{{ subnet_state }}"
+    security_group: "nsg-{{ subnet_name }}"
